# jinn-node

./: .build-trigger  .dockerignore  .env.example  .gitignore  .operate  AGENTS.md  Dockerfile  Dockerfile.standalone  HUMANS.md  README.md  SETUP.md  docker-compose.yml  package.json  pyproject.toml  railway.toml  tsconfig.json
deploy/worker-default/: init.sh  nixpacks.toml  railway.toml
docs/: docker-deployment.md  run-a-node.md
scripts/: deploy-mech.ts  deploy-railway.sh  init.sh  support-bundle.ts  test-deploy-mech-tenderly.ts  verify-credential-requirements.ts
scripts/mech/: assert-delivery-rates.ts  fix-all-delivery-rates.ts
scripts/service/: add.ts  list.ts  register.ts  rewards.ts  status.ts
scripts/staking/: claim-incentives.ts  claim-service-rewards.ts  migrate-staking-contract.ts
scripts/wallet/: backup.ts  export-keys.ts  info.ts  recover.ts  restake.ts  unstake.ts  withdraw.ts
skills/jinn-node/: SKILL.md
skills/jinn-node-operator-setup/: SKILL.md
skills/jinn-node-railway-deploy/: SKILL.md
skills/jinn-node-staking-ops/: SKILL.md
skills/jinn-node-support-triage/: SKILL.md
skills/jinn-node-wallet-ops/: SKILL.md
src/agent/: agent.ts  run.ts  settings.template.dev.json  settings.template.json  signing-proxy.ts  toolPolicy.ts  tsconfig.json
src/auth/: cli.ts  index.ts  manager.ts  store.ts  sync.ts  types.ts
src/config/: index.ts
src/data/: supabase.ts  ventureTemplates.ts  ventures.ts
src/env/: control.ts  index.ts  keystore-decrypt.ts  operate-profile.ts
src/gemini-extension/: gemini-extension.json  package.json
(+326 files in other folders)
