[tool.poetry]
name = "jinn-node-python-deps"
version = "0.1.0"
description = "Python dependencies for jinn-node OLAS service management"
authors = ["Jinn Network"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
olas-operate-middleware = {git = "https://github.com/Jinn-Network/olas-operate-middleware.git", rev = "3e8d8f38549d20e18226dfa511b684781703b4f2"}
setuptools = ">=42,<82"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
